--- a/css/style.css
+++ b/css/style.css
@@ -44,14 +44,15 @@ header{
     width: 100%;
     height: 48px;
     background-color:var(--bg-primary);
-    border-bottom: 0.5px solid var(--text-tertiary);
-    flex-shrink: 0; /* 크기 고정 */
+    border-bottom: 0.5px solid var(--text-tertiary) !important;
+    flex-shrink: 0; 
 }
 
 main{
     width: 100%;
-    flex: 1; /* 남은 공간 모두 차지 */
-    overflow-y: auto; /* 스크롤 가능 */
+    height: 736px;
+    overflow-y: auto; 
+    min-height: 0;
     
 }
 main::-webkit-scrollbar{
@@ -62,6 +63,6 @@ footer{
     width: 100%;
     height: 60px;
     background-color: var(--bg-primary);
-    border-top: 0.5px solid var(--text-tertiary);
-    flex-shrink: 0; /* 크기 고정 */
+    border-top: 0.5px solid var(--text-tertiary) !important;
+    flex-shrink: 0; 
 }
