--- a/mandarin_market/src/App.css
+++ b/mandarin_market/src/App.css
@@ -1,6 +1,6 @@
 /* 1. CSS 변수 (전역 색상 및 스타일 정의) */
 :root {
-  --main-color: #f26e22;
+  --main-color: #0b4d22;
   --main-color-light: #ffc7a7;
   --text-color-dark: #000;
   --text-color-gray: #767676;
