--- a/mandarin_market/src/styles/SplashScreen.css
+++ b/mandarin_market/src/styles/SplashScreen.css
@@ -17,5 +17,5 @@
 .splash-title {
   font-size: 24px;
   font-weight: bold;
-  color: #f26e22; /* 감귤마켓 메인 컬러 */
+  color: #0b4d22; /* 감귤마켓 메인 컬러 */
 }
