--- a/mandarin_market/src/styles/LoginPage.css
+++ b/mandarin_market/src/styles/LoginPage.css
@@ -5,7 +5,7 @@
   align-items: center;
   height: 100vh;
   width: 100vh;
-  background-color: #f26e22;
+  background-color: #0b4d22;
   position: relative;
   max-width: 500px; /*페이지 전체의 최대 너비를 500px로 제한*/
   margin: 0 auto; /*화면 중앙에 위치하도록 설정*/
