--- a/mandarin_market/src/styles/auth/EmailLoginPage.css
+++ b/mandarin_market/src/styles/auth/EmailLoginPage.css
@@ -53,7 +53,7 @@
 
 .form-group input:focus {
   outline: none;
-  border-bottom: 1px solid #f26e22; /* 포커스 시 색상 변경 */
+  border-bottom: 1px solid #0b4d22; /* 포커스 시 색상 변경 */
 }
 
 .error-message {
@@ -78,7 +78,7 @@
 }
 
 .auth-button:not(:disabled) {
-  background-color: #f26e22; /* 활성화 색상 */
+  background-color: #0b4d22; /* 활성화 색상 */
 }
 
 .auth-link {
